# simple_const_string

./: CMakeLists.txt  const_string.h  main.cpp
